crates/libtest2/tests/ui/unsupported_return_type.rs
#[libtest2::main]
fn main() {}

#[libtest2::test]
fn integer(_: &libtest2::TestContext) -> i32 {
    0
}
